--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <div class="restaurants-card">
                         <a href="palettedugout.html">
                           <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" loading="lazy" alt="Restaurant la palette du goût">
+                          <span class="promo">
+                            Nouveau
+                          </span>
                           <div class="restaurants-content">
                             <div class="restaurants-content_text">
                               <h2>La palette du goût</h2>
@@ -69,6 +72,9 @@
                     <div class="restaurants-card new">
                         <a href="lanoteenchantee.html">
                           <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" loading="lazy" alt="Restaurant La note enchantée">
+                          <span class="promo">
+                            Nouveau
+                        </span>
                           <div class="restaurants-content">
                             <div class="restaurants-content_text">
                               <h2>La note enchantée</h2>
